force-app/main/default/objects/Staffing_Request__c/Staffing_Request__c.object-meta.xml
<CustomObject>
    <description>Soft staffing demand awaiting capacity and commercial revalidation by an authorized Staffer.</description>
    <label>Staffing Request</label>
    <nameField>
        <displayFormat>SR-{00000}</displayFormat>
        <label>Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Staffing Requests</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>