force-app/main/default/objects/Staffing_Request__c/fields/Budget_Signature__c.field-meta.xml
<CustomField><fullName>Budget_Signature__c</fullName><label>Budget Signature</label><length>64</length><trackHistory>true</trackHistory><type>Text</type></CustomField>