force-app/main/default/objects/Staffing_Request__c/fields/Control_Reason__c.field-meta.xml
<CustomField>
    <fullName>Control_Reason__c</fullName>
    <label>Control Reason</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>