force-app/main/default/objects/Staffing_Request__c/fields/Daily_Hours__c.field-meta.xml
<CustomField>
    <fullName>Daily_Hours__c</fullName>
    <label>Daily Requested Hours</label>
    <precision>4</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>