force-app/main/default/objects/Staffing_Request__c/fields/Decision_By__c.field-meta.xml
<CustomField>
    <fullName>Decision_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Decision By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Staffing Decisions</relationshipLabel>
    <relationshipName>Staffing_Decisions</relationshipName>
    <type>Lookup</type>
</CustomField>