force-app/main/default/objects/Staffing_Request__c/fields/Decision_Correlation_ID__c.field-meta.xml
<CustomField><fullName>Decision_Correlation_ID__c</fullName><label>Decision Correlation ID</label><length>64</length><type>Text</type></CustomField>