force-app/main/default/objects/Staffing_Request__c/fields/Decision_Reason__c.field-meta.xml
<CustomField>
    <fullName>Decision_Reason__c</fullName>
    <label>Decision Reason</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>