force-app/main/default/objects/Staffing_Request__c/fields/Decision_Role__c.field-meta.xml
<CustomField>
    <fullName>Decision_Role__c</fullName>
    <label>Decision Role</label>
    <length>80</length>
    <type>Text</type>
</CustomField>