force-app/main/default/objects/Staffing_Request__c/fields/Engagement__c.field-meta.xml
<CustomField>
    <fullName>Engagement__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Engagement</label>
    <referenceTo>Engagement__c</referenceTo>
    <relationshipLabel>Staffing Requests</relationshipLabel>
    <relationshipName>Staffing_Requests</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>