force-app/main/default/objects/Staffing_Request__c/fields/Filled_At__c.field-meta.xml
<CustomField><fullName>Filled_At__c</fullName><description>Timestamp at which a candidate was accepted.</description><label>Filled At</label><trackHistory>false</trackHistory><type>DateTime</type></CustomField>