force-app/main/default/objects/Staffing_Request__c/fields/Fit_Score__c.field-meta.xml
<CustomField>
    <fullName>Fit_Score__c</fullName>
    <label>Fit Score</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>