force-app/main/default/objects/Staffing_Request__c/fields/Request_Version__c.field-meta.xml
<CustomField>
    <fullName>Request_Version__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Request Version</label>
    <precision>6</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>