force-app/main/default/objects/Staffing_Request__c/fields/Requested_Role__c.field-meta.xml
<CustomField>
    <fullName>Requested_Role__c</fullName>
    <label>Requested Salesforce Role</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
</CustomField>