force-app/main/default/objects/Staffing_Request__c/fields/Requester__c.field-meta.xml
<CustomField>
    <fullName>Requester__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requester</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Requested Staffing</relationshipLabel>
    <relationshipName>Requested_Staffing</relationshipName>
    <type>Lookup</type>
</CustomField>