force-app/main/default/objects/Staffing_Request__c/fields/Requirement_Summary__c.field-meta.xml
<CustomField>
    <fullName>Requirement_Summary__c</fullName>
    <label>Requirement Summary</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>