force-app/main/default/objects/Staffing_Request__c/fields/Resource__c.field-meta.xml
<CustomField>
    <fullName>Resource__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Resource</label>
    <referenceTo>Resource__c</referenceTo>
    <relationshipLabel>Staffing Requests</relationshipLabel>
    <relationshipName>Staffing_Requests</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>