force-app/main/default/objects/Staffing_Request__c/fields/Responsible_Owner__c.field-meta.xml
<CustomField>
    <fullName>Responsible_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Classification Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Owned Staffing Controls</relationshipLabel>
    <relationshipName>Owned_Staffing_Controls</relationshipName>
    <type>Lookup</type>
</CustomField>