force-app/main/default/objects/Staffing_Request__c/fields/Shortlist_Conversion_Percent__c.field-meta.xml
<CustomField><fullName>Shortlist_Conversion_Percent__c</fullName><description>Accepted candidates divided by shortlisted candidates for this demand.</description><label>Shortlist Conversion Percent</label><precision>7</precision><scale>2</scale><trackHistory>false</trackHistory><type>Percent</type></CustomField>