force-app/main/default/objects/Staffing_Request__c/fields/Shortlist_Count__c.field-meta.xml
<CustomField><fullName>Shortlist_Count__c</fullName><description>Candidates included in the decision shortlist.</description><label>Shortlist Count</label><precision>5</precision><scale>0</scale><trackHistory>false</trackHistory><type>Number</type></CustomField>