force-app/main/default/objects/Staffing_Request__c/fields/SLA_Due__c.field-meta.xml
<CustomField>
    <fullName>SLA_Due__c</fullName>
    <label>SLA Due</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>