force-app/main/default/objects/Staffing_Request__c/fields/Source_Criteria__c.field-meta.xml
<CustomField><fullName>Source_Criteria__c</fullName><description>Minimized, allowlisted search/filter criteria used to select the candidate.</description><label>Source Criteria</label><length>4000</length><type>LongTextArea</type><visibleLines>6</visibleLines></CustomField>