force-app/main/default/objects/Staffing_Request__c/fields/Submitted_At__c.field-meta.xml
<CustomField><fullName>Submitted_At__c</fullName><description>Timestamp at which the request entered the staffed decision queue.</description><label>Submitted At</label><trackHistory>false</trackHistory><type>DateTime</type></CustomField>