force-app/main/default/objects/Staffing_Request__c/fields/Time_To_Fill_Hours__c.field-meta.xml
<CustomField><fullName>Time_To_Fill_Hours__c</fullName><description>Elapsed hours from governed submission to accepted staffing decision.</description><label>Time to Fill Hours</label><precision>10</precision><scale>2</scale><trackHistory>false</trackHistory><type>Number</type></CustomField>