force-app/main/default/objects/Staffing_Request__c/fields/Work_Unit__c.field-meta.xml
<CustomField><fullName>Work_Unit__c</fullName><deleteConstraint>SetNull</deleteConstraint><label>Work Unit</label><referenceTo>Work_Unit__c</referenceTo><relationshipLabel>Staffing Requests</relationshipLabel><relationshipName>Staffing_Requests</relationshipName><type>Lookup</type></CustomField>