force-app/main/default/objects/Staffing_Request__c/validationRules/Staffing_Request_Range.validationRule-meta.xml
<ValidationRule>
    <fullName>Staffing_Request_Range</fullName>
    <active>true</active>
    <errorConditionFormula>OR(End_Date__c &lt; Start_Date__c, Daily_Hours__c &lt;= 0, Daily_Hours__c &gt; 24)</errorConditionFormula>
    <errorMessage>Provide a valid date range and daily hours between 0 and 24.</errorMessage>
</ValidationRule>