force-app/main/default/objects/Staffing_Request__c/validationRules/Unbilled_Request_Control.validationRule-meta.xml
<ValidationRule>
    <fullName>Unbilled_Request_Control</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISPICKVAL(Classification__c, &quot;Billing&quot;)), OR(ISBLANK(Responsible_Owner__c), ISBLANK(Review_Date__c), ISBLANK(Control_Reason__c)))</errorConditionFormula>
    <errorMessage>Unbilled and internal requests require an accountable owner, review date and control reason.</errorMessage>
</ValidationRule>