force-app/main/default/objects/Staffing_Request__c/listViews/Skill_Backed_Staffing.listView-meta.xml
<ListView><fullName>Skill_Backed_Staffing</fullName><columns>NAME</columns><columns>Engagement__c</columns><columns>Work_Unit__c</columns><columns>Requested_Role__c</columns><columns>Resource__c</columns><columns>Fit_Score__c</columns><columns>State__c</columns><filterScope>Everything</filterScope><filters><field>State__c</field><operation>equals</operation><value>Accepted</value></filters><label>Skill-backed Staffing</label></ListView>